clusters/base/jore4-services/jore4-namespace.yaml
# Creates namespace for jore4 services

apiVersion: v1
kind: Namespace
metadata:
  name: hsl-jore4
---
