clusters/base/jore4-services/jore4-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jore4-auth
  namespace: hsl-jore4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jore4-auth
  template:
    metadata:
      labels:
        app: jore4-auth
    spec:
      restartPolicy: Always
      containers:
        - name: jore4-auth-image
          image: "hsldevcom/jore4-auth:dockerize--bf95d6d8b7bacfd6b990b2e9d55e4f6a1554879b"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
      volumes:
        - name: secrets-store-inline
          # <extend>: may come from csi (key-vault) or configmap (local dev) source
---
apiVersion: v1
kind: Service
metadata:
  name: jore4-auth
  namespace: hsl-jore4
spec:
  selector:
    app: jore4-auth
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
