clusters/base/jore4-services/jore4-hasura.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jore4-hasura
  namespace: hsl-jore4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jore4-hasura
  template:
    metadata:
      labels:
        app: jore4-hasura
    spec:
      restartPolicy: Always
      containers:
        - name: jore4-hasura-image
          image: "hsldevcom/jore4-hasura:fix-metadata--613b29c2d4c6f0ef1cf6f258ab3071b780fa23bd"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
      volumes:
        - name: secrets-store-inline
          # <extend>: may come from csi (key-vault) or configmap (local dev) source
---
apiVersion: v1
kind: Service
metadata:
  name: jore4-hasura
  namespace: hsl-jore4
spec:
  selector:
    app: jore4-hasura
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
